adding hyprland ecosystem

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -36,7 +36,7 @@ monitor=Virtual-1,1920x1080@60.00,0x0,1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = wofi --show drun
 
 
@@ -52,6 +52,13 @@ $menu = wofi --show drun
 exec-once = waybar & 
 exec-once = hyprpaper &
 exec-once = swaync
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
+
+exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"   # for GTK3 apps
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
+
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 
 
 #############################
@@ -250,13 +257,16 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Take a Screenshot
-bind = $mainMod SHIFT, s,exec, hyprshot --mode region
+bind = $mainMod SHIFT, s,exec, hyprshot --mode region --raw | satty --filename -
+
+# Clipboard manager
+bind = SUPER, V, exec, cliphist list | wofi --dmenu --pre-display-cmd "echo '%s' | cut -f 2" | cliphist decode | wl-copy
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, W, killactive,
 bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+#bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod CTRL, J, togglesplit, # dwindle
