--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1116,7 +1116,7 @@ font_size 12
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-window_padding_width 12
+window_padding_width 4 12
 window_padding_height 12
 
 #: The window padding (in pts) (blank area between the text and the
