adding capslock status on waybar

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -37,8 +37,7 @@ monitor=Virtual-1,1920x1080@60.00,0x0,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = wofi --show drun
-
+$menu = wofi -n
 
 #################
 ### AUTOSTART ###
@@ -341,6 +340,19 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
+# Controlling Pop Up/Floating Window app
+windowrule { 
+    name = pavucontrol
+    float = yes
+    match:class = org.pulseaudio.pavucontrol
+    match:title = Volume Control
+}
+windowrule {
+    name = nm-applet
+    float = yes
+    match:class = nm-connection-editor
+    match:title = Network Connections
+}
 
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
