--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -7,32 +7,67 @@
     "spacing": 4, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": [
-	"custom/jats",
         "hyprland/workspaces",
-        "hyprland/mode"
+        "hyprland/window"
     ],
     "modules-center": [
             "clock"
     ],
     "modules-right": [
-        "pulseaudio",
+	"group/tray-expander",
+        "group/audio",
         "network",
         // "power-profiles-daemon",
-        "cpu",
-        "memory",
+	"custom/monitor",
+        //"cpu",
+        //"memory",
         // "temperature",
         // "hyprland/language",
         // "battery",
         // "battery#bat2",
-        "tray",
-        "custom/power"
+        // "tray",
+        "group/notify"
     ],
     // Modules configuration
-    "custom/jats": {
-    	"format": "󰣇",
-	"on-click": "swaync-client -t -sw"
-
+    "group/tray-expander": {
+	"orientation": "inherit",
+	"drawer": {
+	   "transition-duration": 600,
+	   "children-class": "tray-group-item"
+        },
+	"modules": ["custom/expand-icon","keyboard-state", "tray"]
+    	
     },
+    "custom/expand-icon": {
+        "format": "",
+	"tooltip": false
+    },
+    "keyboard-state": {
+        "capslock": true,
+	"numlock": false,
+        "format": "{icon}",
+        "format-icons": {
+	   "locked": "󰌎",
+	   "unlocked": ""
+	}
+    },
+    "group/audio": {
+	"orientation": "horizontal",
+	"modules": ["pulseaudio", "pulseaudio#microphone"]
+    
+    },
+    "group/notify": {
+        "orientation": "horizontal",
+	"modules": [ "custom/notif", "custom/power"]
+    },
+    "custom/notif": {
+	"format": "",
+	"on-click": "swaync-client -t -sw"
+    },
+  "hyprland/window": {
+    "max-length": 20,
+    "separate-outputs": true
+  },
     "hyprland/workspaces": {
 	 "on-click":"activate",
          "format": "{icon}",
@@ -51,9 +86,7 @@
 	 "persistent-workspaces": {
 	    "1":[],
 	    "2":[],
-	    "3":[],
-	    "4":[],
-	    "5":[]
+	    "3":[]
 	 }
      },
     "keyboard-state": {
@@ -65,9 +98,7 @@
             "unlocked": ""
         }
     },
-    "hyprland/mode": {
-        "format": "<span style=\"italic\">{}</span>"
-    },
+    
     "hyprland/scratchpad": {
         "format": "{icon} {count}",
         "show-empty": false,
@@ -122,13 +153,13 @@
 	"format": "{:%A, %d %B %H:%M}",
         "format-alt": "{:%d %B W%V %Y}"
     },
-    "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
+    "custom/monitor": {
+        "format": "",
+        "on-click": "kitty --title btop sh -c 'btop'"
     },
-    "memory": {
-        "format": "{}% "
-    },
+    //"memory": {
+      //  "format": "{}% "
+    //},
     "temperature": {
         // "thermal-zone": 2,
         // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
@@ -173,21 +204,23 @@
     },
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
+	"format-icons": ["󰤯","󰤟","󰤢","󰤥","󰤨"],
+        "format": "{icon}",
+        "format-wifi": "{icon}",
+        "format-ethernet": "󰀂",
+        "tooltip-format-wifi": "({frequency} GHz)\n {bandwidthDownBytes}  {bandwidthUpBytes}",
+        "tooltip-format-ethernet": " {bandwidthDownBytes}  {bandwidthUpBytes}",
         "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        "format-disconnected": "󰤭",
+        "format-alt": "{ifname}: {ipaddr}/{cidr}",
+	// "on-click-right": "nm-applet"
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
-        "format": "{volume}% {icon} {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
-        "format-source": "{volume}% ",
-        "format-source-muted": "",
+        "format": "{icon} {volume}% ",
+        "format-bluetooth": "{volume}% {icon} ",
+        "format-bluetooth-muted": " {icon} ",
+        "format-muted": " ",
         "format-icons": {
             "headphone": "",
             "hands-free": "",
@@ -197,7 +230,17 @@
             "car": "",
             "default": ["", "", ""]
         },
-        "on-click": "pavucontrol"
+        "on-click": "pamixer -t",
+	"on-click-right": "pavucontrol"
+    },
+    "pulseaudio#microphone": {
+        "format": "{format_source}",
+        "format-source": " {volume}%",
+        "format-source-muted": " ",
+        "on-click": "pamixer --default-source -t",
+        "on-scroll-up": "pamixer --default-source -i 5",
+        "on-scroll-down": "pamixer --default-source -d 5",
+        "scroll-step": 5
     },
     "custom/media": {
         "format": "{icon} {text}",
@@ -213,15 +256,16 @@
     },
     "custom/power": {
         "format" : "⏻ ",
-		"tooltip": false,
-		"menu": "on-click",
-		"menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
-		"menu-actions": {
-			"shutdown": "shutdown",
-			"reboot": "reboot",
-			"suspend": "systemctl suspend",
-			"hibernate": "systemctl hibernate",
-			"logout": "pkill -U ${USER}"
-		}
+	"tooltip": false,
+	"on-click": "wlogout"
+//	"menu": "on-click",
+//	"menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
+//	"menu-actions": {
+//		"shutdown": "shutdown",
+//		"reboot": "reboot",
+//		"suspend": "systemctl suspend",
+//		"hibernate": "systemctl hibernate",
+//		"logout": "pkill -U ${USER}"
+//	}
     }
 }
